# finchers-r2d2

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  release.toml  search-index.js
changelog/: 0.1.x.md
examples/: sqlite.rs
finchers_r2d2/: all.html  fn.pool_endpoint.html  index.html  sidebar-items.js  struct.PoolEndpoint.html
finchers_r2d2/current_thread/: PoolEndpoint.t.html  fn.pool_endpoint.html  index.html  sidebar-items.js  struct.PoolEndpoint.html
finchers_r2d2/current_thread/imp/: fn.pool_endpoint.html  struct.PoolEndpoint.html
finchers_r2d2/imp/: fn.pool_endpoint.html  pool_endpoint.v.html  struct.PoolEndpoint.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/finchers/endpoint/: trait.Endpoint.js
src/: current_thread.rs  lib.rs
src/finchers_r2d2/: current_thread.rs.html  lib.rs.html
