[package]
name = "finchers-r2d2"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
finchers = "0.12.0-alpha.8"
r2d2 = "0.8.2"
futures = "0.1.24"
log = "0.4.5"

[dev-dependencies]
r2d2_sqlite = "0.6.0"
rusqlite = "0.14.0"
serde = { version = "1.0.79", features = ["derive"] }
pretty_env_logger = "0.2.4"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
tag = "v0.12.0-alpha.8"
