[package]
name = "finchers-r2d2"
version = "0.1.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
finchers = "0.12"

futures = "0.1.24"
log = "0.4.5"
r2d2 = "0.8.2"
tokio-executor = "0.1.5"
tokio-threadpool = "0.1.7"

[dev-dependencies]
pretty_env_logger = "0.2.4"
r2d2_sqlite = "0.6.0"
rusqlite = "0.14.0"
serde = { version = "1.0.79", features = ["derive"] }

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
tag = "v0.12.0"
